--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3781,7 +3781,7 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:hover {
-				color: rgb(255, 255, 255);
+				color: rgba(255, 255, 255, 0.55);
 			}
 
 			#sidebar nav a.active {
