--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,6 +95,7 @@ input, select, textarea {
 
 	*, *:before, *:after {
 		box-sizing: inherit;
+	
 	}
 
 	body {
@@ -176,6 +177,7 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #ffffff;
+		text-shadow: #6c6f70c4 0px 10px 10px;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.5em 0;
@@ -187,7 +189,7 @@ input, select, textarea {
 		}
 
 	h1 {
-		font-size: 4.5em;
+		font-size: 6em;
 		font-family: Script MT, Script Std, cursive;
 		text-align: center;
 	}
@@ -3527,7 +3529,7 @@ input, select, textarea {
 /* Sidebar */
 
 	#sidebar {
-		padding: 2.5em 2.5em 0.5em 2.5em ;
+		padding: 1em 1em 0.5em 1em ;
 		background: #023047;
 		cursor: default;
 		height: 100vh;
@@ -3537,7 +3539,7 @@ input, select, textarea {
 		position: fixed;
 		text-align: right;
 		top: 0;
-		width: 18em;
+		width: 14em;
 		z-index: 10000;
 	}
 
@@ -3878,14 +3880,14 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/intro.svg");
+		background-image: url("images/intro.svg") ,linear-gradient(to bottom right, rgba(255, 255, 255, 0),#ffffff);
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
 	}
 
 		#intro p {
-			font-size: 1.25em;
+			font-size: 1.5em;
 			text-align: center;
 		}
 
