--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,7 +116,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: rgba(18, 36, 39, 0.671);
+		color: #3c575bdf;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16.5pt;
 		font-weight: bold;
@@ -177,7 +177,6 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #ffffff;
-		text-shadow: #6c6f70c4 0px 10px 10px;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.5em 0;
@@ -192,6 +191,7 @@ input, select, textarea {
 		font-size: 6em;
 		font-family: Script MT, Script Std, cursive;
 		text-align: center;
+		text-shadow: #6c6f70c4 0px 10px 10px;
 	}
 
 		h1.major {
@@ -3745,10 +3745,10 @@ input, select, textarea {
 			border: 0;
 			color: rgba(255, 255, 255, 0.35);
 			display: block;
-			font-size: 0.6em;
+			font-size: 0.75em;
 			font-weight: bold;
 			letter-spacing: 0.25em;
-			line-height: 1.75;
+			line-height: 1.5;
 			outline: 0;
 			padding: 1.35em 0;
 			position: relative;
@@ -3760,7 +3760,7 @@ input, select, textarea {
 				border-radius: 0.2em;
 				bottom: 0;
 				content: '';
-				height: 0.4em;
+				height: 0.35em;
 				position: absolute;
 				right: 0;
 				width: 100%;
@@ -3771,10 +3771,10 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #fb8500, #ffb703);
-				background-image: -webkit-linear-gradient(to right, #fb8500, #ffb703);
-				background-image: -ms-linear-gradient(to right, #fb8500, #ffb703);
-				background-image: linear-gradient(to right, #fb8500, #ffb703);
+				background-image: -moz-linear-gradient(to left, #ff7300, #ffb703);
+				background-image: -webkit-linear-gradient(to left, #ff7300, #ffb703);
+				background-image: -ms-linear-gradient(to left, #ff7300, #ffb703);
+				background-image: linear-gradient(to left, #ff7300, #ffb703);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -3861,10 +3861,21 @@ input, select, textarea {
 						padding: 0;
 					}
 
-						#sidebar nav a:after {
-							background-image: none;
-							background-color: #fb8500;
-						}
+					#sidebar nav a:before {
+						background: #ffb703;
+					}
+		
+					#sidebar nav a:after {
+						background-image: -moz-linear-gradient(to bottom, #ff7300, #fb8500, #ffb703);
+						background-image: -webkit-linear-gradient(to bottom, #ff7300, #fb8500, #ffb703);
+						background-image: -ms-linear-gradient(to bottom, #ff7300, #fb8500, #ffb703);
+						background-image: linear-gradient(to bottom, #ff7300, #fb8500, #ffb703);
+						-moz-transition: max-width 0.2s ease;
+						-webkit-transition: max-width 0.2s ease;
+						-ms-transition: max-width 0.2s ease;
+						transition: max-width 0.2s ease;
+						max-width: 0;
+					}
 
 		}
 
@@ -3880,7 +3891,7 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/intro.svg") ,linear-gradient(to bottom right, rgba(255, 255, 255, 0),#ffffff);
+		background-image: url("images/intro.svg") ,linear-gradient(to bottom right, rgba(255, 255, 255, 0),#ffffffd6);
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
@@ -3889,6 +3900,7 @@ input, select, textarea {
 		#intro p {
 			font-size: 1.5em;
 			text-align: center;
+			text-shadow: #ffffff 0 3px 7px;
 		}
 
 			@media screen and (max-width: 980px) {
