--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3250,7 +3250,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1-alt {
-			background-color: #023047;
+			background-color: #013a5e;
 		}
 
 		.wrapper.style2 {
