--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3745,7 +3745,7 @@ input, select, textarea {
 			border: 0;
 			color: rgba(255, 255, 255, 0.35);
 			display: block;
-			font-size: 0.75em;
+			font-size: 0.68em;
 			font-weight: bold;
 			letter-spacing: 0.25em;
 			line-height: 1.5;
@@ -3851,7 +3851,7 @@ input, select, textarea {
 							display: block;
 							height: inherit;
 							line-height: inherit;
-							margin: 0 0 0 2em;
+							margin: 0 0 0 1em;
 							padding: 0;
 						}
 
@@ -3877,8 +3877,10 @@ input, select, textarea {
 						max-width: 0;
 					}
 					#sidebar > .inner > .logo{
-						width: 90;
 						margin-right: 1em;
+						margin-top: 5px;
+						margin-bottom: 5px;
+						max-height: 90px;
 					}
 
 		}
