--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1995,15 +1995,15 @@ input, select, textarea {
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
 		border-radius: 0.25em;
-		border: solid 1px rgba(255, 255, 255, 0.15);
-		background: rgba(255, 255, 255, 0.05);
+		border: solid 1px rgba(250, 133, 0, 0.15);
+		background: rgba(255, 133, 0, 0.05);
 		margin: 0 0 2em 0;
 	}
 
 		.features section {
 			padding: 3.5em 3em 1em 7em ;
 			width: 50%;
-			border-top: solid 1px rgba(255, 255, 255, 0.15);
+			border-top: solid 1px rgba(250, 133, 0, 0.15);;
 			position: relative;
 		}
 
@@ -2012,7 +2012,7 @@ input, select, textarea {
 			}
 
 			.features section:nth-child(2n) {
-				border-left: solid 1px rgba(255, 255, 255, 0.15);
+				border-left: solid 1px rgba(250, 133, 0, 0.15);
 			}
 
 			.features section .icon {
@@ -2531,6 +2531,7 @@ input, select, textarea {
 			height: 2.5em;
 			display: block;
 			background: #ffffff;
+			text-shadow: #2c2c2dc4 0px 2px 4px;
 			border-radius: 100%;
 			color: #312450;
 			text-align: center;
@@ -3256,7 +3257,7 @@ input, select, textarea {
 
 		.wrapper.style2 {
 			background-color: #3f37c9;
-			background-image: linear-gradient(to right, rgba(255, 255, 255, 0),#0000009e,#000000bd);
+			background-image: linear-gradient(to right, rgba(255, 255, 255, 0),#00000049,#000000bd);
 		}
 
 		.wrapper.style2-alt {
@@ -3951,4 +3952,18 @@ input, select, textarea {
 		font-family: BankGothic Lt BT;
 		text-shadow: #2c2c2dc4 3px 3px 4px;
 		
+	}
+	#two h2{
+		font-family: BankGothic Lt BT;
+		text-shadow: #2c2c2dc4 6px 6px 6px;
+	}
+	#two h3{
+		color: #ffffff;
+		font-family: BankGothic Lt BT;
+		text-shadow: #2c2c2dc4 6px 6px 6px;
+	}
+	#two p{
+		color: #ffffff;
+		font-family: BankGothic Lt BT;
+		text-shadow: #2c2c2dc4 6px 6px 6px;
 	}
