--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3967,3 +3967,8 @@ input, select, textarea {
 		font-family: BankGothic Lt BT;
 		text-shadow: #2c2c2dc4 6px 6px 6px;
 	}
+	
+	#three h2{
+		font-family: BankGothic Lt BT;
+		text-shadow: #2c2c2dc4 6px 6px 6px;
+	}
