--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -119,7 +119,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #ffffff;
-		font-family: BankGothic Lt BT;
+		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16.5pt;
 		font-weight: bold;
 		line-height: 1.75;
@@ -2845,7 +2845,8 @@ input, select, textarea {
 	}
 
 		ul.menu > li {
-			border-left: solid 1px rgba(255, 255, 255, 0.15);
+			border-left: solid 1px #ffffff91;
+			-shadow: #2c2c2dc4 6px 6px 6px;
 			display: inline-block;
 			line-height: 1;
 			margin-left: 1.5em;
@@ -3998,6 +3999,14 @@ input, select, textarea {
 		text-shadow: #2c2c2dc4 6px 6px 6px;
 	}
 	#four textarea{
+		font-family: BankGothic Lt BT;
+		text-shadow: #2c2c2dc4 6px 6px 6px;
+	}
+	#four a{
+		text-shadow: #2c2c2dc4 3px 3px 3px;
+	}
+	#footer li{
+		color: #ffffff91;
 		font-family: BankGothic Lt BT;
 		text-shadow: #2c2c2dc4 6px 6px 6px;
 	}
