aggiusto css wiki

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4038,7 +4038,7 @@ input, select, textarea {
 		background-image: linear-gradient(to bottom,  rgba(18, 18, 18, 0.514),#000000bd);
 	}
 	#twotwo section{
-		background-color: #4361ee;
+		background-color: #311B90;
 		background-image: linear-gradient(to bottom,  rgba(18, 18, 18, 0.514),#000000bd);
 	}
 	
